aws/projects/Project-001-Roman-Numerals-Converter/cfn-temp.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Roman Numerals Converter Application (Python Flask) deployed on AWS EC2 with Cloudformation and AWS CLI

Parameters:
  compKP:
    Description: 
    Type: AWS::EC2::KeyPair::KeyName
    Default: 
  
Resources:
  compIns:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      KeyName: !Ref firstkey
      SecurityGroups:
        - !Ref cfn-sec-group
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
        UserData: !Base64 |
        #! /bin/bash
        yum update -y
        pip3 install flask
        mkdir roman-project && cd roman-project
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/app.py
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 app.py


  compSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


Outputs:
  AppUrl:
    Description: Url of the Application
    Value: !Join 
    - ''
    - - 'http://'
    - !GetAtt myIns.PublicDnsName
